solved bug, font weight and lato not being applied to about nav bar, issue fixed by adding google fonts link to html of individual webpage, some overlap with ul a element styling too. fixed nav bar added to all pages

--- a/css/shared.css
+++ b/css/shared.css
@@ -1,3 +1,13 @@
+body {
+    /* This did not create a margin between the other elements, 
+    this needs to be done individually */
+   /* padding: 10px; */
+   font-family: 'Merriweather Sans', sans-serif;
+font-family: 'Open Sans', sans-serif;
+   text-align: center;
+   margin: 0;
+}
+
 /* HEADER */
 
 
@@ -6,9 +16,9 @@
 .main-header {
     width: 100%;
     padding: 8px 16px;
-  
+font-weight:0;
     margin-bottom: 0;
-    margin-top: 0; 
+   top: 0; 
     position: fixed;
    z-index:2;
     background-color: rgb(254, 254, 254); /* Fully opaque very light grey */
@@ -70,7 +80,9 @@ text-decoration: none;
 
 ul a {
     text-decoration: none;
-    font-weight: 600;
+    font-family: 'Lato', sans-serif;
+    font-weight: 0;
+   
 
 }
 .main-nav__items {
@@ -88,6 +100,7 @@ ul a {
     /* this styles it on one line-readable. */
     margin: 10px 40px;
  text-decoration: none;
+ font-family: "l"
 
 }
  a {
@@ -106,3 +119,67 @@ grouping stylesheets if the value is the same */
 
 
 /* END OF NAV SECTION */
+
+.color-red {
+    color: red;
+  }
+
+.main-footer {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: #dd9d8956;
+    margin-top: 50px;
+    padding: 32px;
+}
+
+
+
+.main-footer ul {
+    /* display: flex; */
+    /* margin: 0 auto; */
+    margin: 0;
+    padding: 0;
+    list-style: none; 
+    text-align: center;
+    /* width: 55%;
+    justify-content: center; */
+  
+}
+
+
+
+.main-footer li {
+   
+    color: grey;
+    font-weight: 500;
+    display: inline-block;
+    /* top and bottom 0, left right 16px */
+    /* this is where to change the margin of the list items */
+   margin: 0 25px;
+
+}
+
+.main-footer a {
+ 
+    color: grey;
+    font-weight: 500;
+    /* defines how long the transition effect should take to complete.  */
+    transition: transform 1s ease;
+   
+   
+}
+
+.main-footer a:hover {
+
+    color: rgb(90, 89, 89);
+}
+
+.main-footer a:active {
+    
+    color: rgb(102, 102, 102);
+    /* The scale(0.8) value reduces the size of the anchor tags 
+    to 80% of their original size, creating a zoom-out effect during the click or interaction. */
+    transform: scale(0.7);
+
+}
